--- a/预习_千峰vue/day01/html/99-计算属性测试1.html
+++ b/预习_千峰vue/day01/html/99-计算属性测试1.html
@@ -1,53 +1,49 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8" />
-		<title>姓名案例_计算属性实现</title>
-		<!-- 引入Vue -->
-		<script type="text/javascript" src="../js/vue.js"></script>
-	</head>
-	<body>
-		<div id="root">
-			姓：<input type="text" v-model="firstName"> <br/><br/>
-			名：<input type="text" v-model="lastName"> <br/><br/>
-			全名：<input type="text" v-model="fullName">
-			<br/><br/>
-		</div>
-	</body>
 
-	<script type="text/javascript">
-		Vue.config.productionTip = false //阻止 vue 在启动时生成生产提示
+<head>
+	<meta charset="UTF-8" />
+	<title>姓名案例_计算属性实现</title>
+	<!-- 引入Vue -->
+	<script type="text/javascript" src="../js/vue.js"></script>
+</head>
 
-		const vm = new Vue({
-			el:'#root',
-			data:{
-				firstName:'张',
-				lastName:'三',
-				x:'你好'
-			},
-			methods: {
-				demo(){
-					
-				}
-			},
-			computed:{
-				fullName:{
-					//get有什么作用？当有人读取fullName时，get就会被调用，且返回值就作为fullName的值
-					//get什么时候调用？1.初次读取fullName时。2.所依赖的数据发生变化时。
-					get(){
-						console.log('get被调用了')
-						// console.log(this) //此处的this是vm
-						return this.firstName + '-' + this.lastName
-					},
-					//set什么时候调用? 当fullName被修改时。
-					set(value){
-						console.log('set',value)
-						const arr = value.split('-')
-						this.firstName = arr[0]
-						this.lastName = arr[1]
-					}
-				}
+<body>
+	<div id="root">
+		姓：<input type="text" v-model="firstName"> <br />
+		名：<input type="text" v-model="lastName"> <br />
+		全名：<input type="text" v-model="fullName">
+	</div>
+</body>
+
+<script type="text/javascript">
+	Vue.config.productionTip = false //阻止 vue 在启动时生成生产提示
+
+	const vm = new Vue({
+		el: '#root',
+		data: {
+			firstName: '张',
+			lastName: '三',
+		},
+		computed: {
+			fullName: {
+				//get有什么作用？当有人读取fullName时，get就会被调用，且返回值就作为fullName的值
+				//get什么时候调用？1.初次读取fullName时。2.所依赖的数据发生变化时。
+				get() {
+					console.log('get被调用了')
+					// console.log(this) //此处的this是vm
+					return this.firstName + '-' + this.lastName
+				},
+				//set什么时候调用? 当fullName被修改时。
+				// set(value){
+				// 	console.log('set',value)
+				// 	const arr = value.split('-')
+				// 	this.firstName = arr[0]
+				// 	this.lastName = arr[1]
+				// }
 			}
-		})
-	</script>
+		}
+	})
+</script>
+
 </html>
